corrected header z-index and displayed slicker arrows key with css

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slick-prev:before{
+    color: #000;
+}
+
+.slick-next::before{
+    color: #000000;
+}
+
+.slick-prev{
+    left: -10% !important;
+}
+
+.slick-next{
+    right: -10% !important;
+}
